# lightfm

./: MANIFEST.in  pyproject.toml  setup.py
lightfm/: _lightfm_fast_no_openmp.c
